<resources>
    <string name="app_name">Bouira Computer Society</string>
    <string name="skip">Skip</string>
    <string name="title1">Hello, BCS 2.0!</string>
    <string name="title2">What is this app</string>
    <string name="title3">Account required !</string>
    <string name="title4">Enjoy !</string>
    <string name="desc1">Thanks for downloading Bouira Computer Science version 2.0. This version is more better than the previous one, please swipe left to continue!</string>
    <string name="desc2">A small platform to access to lessons, TDs, TPs, Exams and more with just one click.</string>
    <string name="desc3">To protect this app from spam and abuse, you need an account. If you don\'t have one already, you can create one.</string>
    <string name="desc4">Our app supports offline pdf save.You just need to download the pdf once and keep it forever. Click the start button to start the app.</string>
    <string name="start">Start</string>
    <string name="Welcome">Login to BCS</string>
    <string name="if_you_don_t_have_an_account_create_a_new_one">If you don\'t have an account, just create one</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register"><u>Create account</u></string>
    <string name="made_with_by_meddahi_fares">Made with ❤️ By Meddahi Fares</string>
    <string name="email_error1">Email required!</string>
    <string name="email_error2">Invalid email address</string>
    <string name="password_error1">Password required !</string>
    <string name="loading_please_wait">Loading please wait</string>
    <string name="loading_message">We are processing your request</string>
    <string name="no_internet">No internet !</string>
    <string name="no_internet_desc">Please double check your internet connection then try again</string>
    <string name="close">Close</string>
    <string name="register2">Register</string>
    <string name="create_bcs_account">Create BCS account</string>
    <string name="full_name">Full name</string>
    <string name="nameError1">Name required</string>
    <string name="nameError2">Invalid name</string>
    <string name="password_error2">Weak password</string>
    <string name="create_an_account_with_singel_click">Create an account with singel click</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="email_error3">Alreay registred</string>
    <string name="welcome_back">Welcome back 👋</string>
    <string name="your_account">My account</string>
    <string name="change_account_and_app_settings">Change account and app settings</string>
    <string name="night_mode">Night mode</string>
    <string name="change_app_night_mode_settings">Change app night mode settings</string>
    <string name="language">Language</string>
    <string name="change_app_language_settings">Change app language settings</string>
    <string name="about_app">About</string>
    <string name="about_app_and_developer">About app and developer</string>
    <string name="change_password">Change password</string>
    <string name="change_youraccount_password">Change your account password</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_desc">Sign out from your account</string>
    <string name="auto">System default</string>
    <string name="night">Night mode</string>
    <string name="light">Light mode</string>
    <string name="apply">Apply</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="no_match">No match</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="done">Done</string>
    <string name="what_is_computer_sciences_for_bouira_university_students">What is Bouira Computer Science (BCS) ?</string>
    <string name="about_app_desc">It\'s an open source android app project, which made to help computer sciences students in this university to access courses, TDs, TPs, Exams... in organised way and without internet connecton.\nPlease note that you need to download the PDF only for the first time.</string>
    <string name="open_source">Open source ?</string>
    <string name="open_source_desc">As i said, it\'s an open source project so, you can do the following things :\n1 - You can get the source code from the link below.\n2 - If you are learning android developement, you can use the source code to learn how things works in this app.\n3 - You can try to improve the app and contact me for your improvements at fares.mdh1@gmail.com.</string>
    <string name="open_source_libraries">Open source libraries used in this app</string>
    <string name="open_source_lib_desc">This app use some open source libraries :\n1 - Android 12 splash screen API : androidx.core:core-splashscreen:1.0.1\n2 - Lottie animations player :\ncom.airbnb.android:lottie:6.3.0\n3 - Google Gson library : \ncom.google.code.gson:gson:2.10.1\n4 - Glide image loader : \ncom.github.bumptech.glide:glide:4.16.0\n5 - PDF Viewer library : com.github.iamyashchouhan:AndroidPdfViewer:1.0.3\n6 - Liquid Swipe : \ncom.github.Chrisvin:LiquidSwipe:1.0.0</string>
    <string name="about_developer">About developer</string>
    <string name="get_source_code_from_github">Get source code from Github</string>
    <string name="developement_info">Developement info</string>
    <string name="this_app_is_made">This app was made with Android Studio IDE.\nXML Language for user interface (UI)\nKOTLIN Language as a programing language\nSupabase as database\nSupabase sdk for Kotlin</string>
    <string name="developer_sm">Hi, i\'m MEDDAHI Fares, a computer sciences student at Bouira university and Android apps developer.\nI\'m happy to share with you this simple project. For any question or details don\'t hesitate to contact me at one of my social media :</string>
    <string name="version_1_0_beta">Version 2.0</string>
    <string name="we_will_show_modules_and_documents_relative_to_your_level_you_can_change_your_level_later">We will show modules and documents relative to your level. You can change your level later!</string>
    <string name="choose_your_level">Choose your level!</string>
    <string name="restart">Restart app!</string>
    <string name="change_level">Change level</string>
    <string name="change_level_desc">Change your current level</string>
</resources>