<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="32dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_app_language_settings"
        android:textSize="13sp"
        android:textColor="@color/text"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <RadioGroup
        android:id="@+id/nightRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/text"
            android:text="@string/auto"/>

        <RadioButton
            android:id="@+id/en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/text"
            android:text="@string/english"/>

        <RadioButton
            android:id="@+id/fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/text"
            android:text="@string/french"/>

        <RadioButton
            android:id="@+id/ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/text"
            android:text="@string/arabic"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cornerRadius="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/apply"
        android:textColor="@color/background"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/madeBy"/>

</LinearLayout>