<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivitySignup"
    android:background="@color/background"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cornerRadius="8dp"
        android:text="@string/register2"
        android:textColor="@color/background"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_focused_person"
        android:drawablePadding="8dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:paddingHorizontal="8dp"
        android:textColorHint="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/emailET" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_focused_password"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:paddingHorizontal="8dp"
        android:textColorHint="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_focused_email"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:paddingHorizontal="8dp"
        android:textColorHint="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordET" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_bcs_account"
        app:layout_constraintBottom_toTopOf="@id/tv1"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_with_singel_click"
        app:layout_constraintBottom_toTopOf="@id/nameET"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="@color/text"
        android:textSize="13sp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv2"
        android:layout_marginBottom="16dp"
        app:lottie_rawRes="@raw/signup"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>