<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="32dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_youraccount_password"
        android:textSize="13sp"
        android:textColor="@color/text"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/oldPasswordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/passwordET"
        android:layout_marginBottom="8dp"
        android:hint="@string/old_password"
        android:textColorHint="@color/text"
        android:paddingHorizontal="8dp"
        android:drawableStart="@drawable/ic_focused_password"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/newPasswordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/passwordET"
        android:layout_marginBottom="8dp"
        android:hint="@string/new_password"
        android:textColorHint="@color/text"
        android:paddingHorizontal="8dp"
        android:drawableStart="@drawable/ic_focused_password"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:background="@drawable/bg_edit_text"/>

    <EditText
        android:id="@+id/cNewPasswordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/passwordET"
        android:layout_marginBottom="8dp"
        android:hint="@string/confirm_new_password"
        android:textColorHint="@color/text"
        android:paddingHorizontal="8dp"
        android:drawableStart="@drawable/ic_focused_password"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:background="@drawable/bg_edit_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cornerRadius="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/change_password"
        android:textColor="@color/background"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/madeBy"/>

</LinearLayout>