<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityAbout"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/backCV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="30dp"
            app:strokeWidth="0dp"
            android:backgroundTint="@color/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:layout_margin="15dp"
                app:tint="@color/primary" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/backCV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lines="1"
                android:text="@string/about_app"
                android:ellipsize="end"
                android:textColor="@color/primary"
                android:layout_marginHorizontal="8dp"/>

            <TextView
                android:id="@+id/toolbarSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/text"
                android:text="@string/about_app_and_developer"
                android:layout_marginHorizontal="8dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/what_is_computer_sciences_for_bouira_university_students"
                android:textColor="@color/primary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/about_app_desc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/developement_info"
                android:textColor="@color/primary"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_app_is_made"
                android:textAlignment="viewStart"
                android:textColor="@color/text"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/open_source"
                android:textColor="@color/primary"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/open_source_desc"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sourCodeBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/text"
                android:text="@string/get_source_code_from_github"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/open_source_libraries"
                android:textColor="@color/primary"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_source_lib_desc"
                android:textAlignment="viewStart"
                android:textColor="@color/text"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/about_developer"
                android:textColor="@color/primary"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/developer_sm"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/fbBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="25dp"
                    app:strokeWidth="0dp"
                    android:backgroundTint="#3F51B5"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/facebook"
                        android:layout_margin="10dp"
                        app:tint="#fff" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/instagramBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="25dp"
                    app:strokeWidth="0dp"
                    android:backgroundTint="#7D3AB7"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/instagram"
                        android:layout_margin="10dp"
                        app:tint="#fff" />

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/githubBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="25dp"
                    app:strokeWidth="0dp"
                    android:backgroundTint="#2A2A2A"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/github"
                        android:layout_margin="10dp"
                        app:tint="#fff" />

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/xBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="25dp"
                    app:strokeWidth="0dp"
                    android:backgroundTint="#000000"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/twitter"
                        android:layout_margin="10dp"
                        app:tint="#fff" />

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/youtubeBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="25dp"
                    app:strokeWidth="0dp"
                    android:backgroundTint="#F44336">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/youtube"
                        android:layout_margin="10dp"
                        app:tint="#fff" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/version_1_0_beta"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/shadow_bottom"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>