<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="32dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:paddingHorizontal="16dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:lottie_rawRes="@raw/no_internet"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_desc"
        android:textSize="13sp"
        android:textColor="@color/text"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cornerRadius="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/close"
        android:textColor="@color/background"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/madeBy"/>

</LinearLayout>